--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="mission.html">Mission</a>
+</nav>
+    
     <h1>Can I Buy It?</h1>
     <p>Enter the product price and your monthly salary:</p>
     
