--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<nav>
-  <a href="index.html">Home</a>
-  <a href="mission.html">Mission</a>
-</nav>
+<header>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="mission.html">Mission</a></li>
+    </ul>
+  </nav>
+</header>
+
     
     <h1>Can I Buy It?</h1>
     <p>Enter the product price and your monthly salary:</p>
