--- a/mission.html
+++ b/mission.html
@@ -8,11 +8,14 @@
 </head>
 <body>
   <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="mission.html">Mission</a>
-    </nav>
-  </header>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="mission.html">Mission</a></li>
+    </ul>
+  </nav>
+</header>
+
   <main>
     <h1>Our Mission</h1>
     <p>Money isn’t just numbers—it’s hours of your life. Let’s rethink how we measure value and make mindful financial choices.</p>
