--- a/mission.html
+++ b/mission.html
@@ -25,8 +25,117 @@
     <p>Using our tool, you can calculate how many workdays an item costs based on your monthly income. This simple shift in perspective transforms your financial mindset.</p>
     <p><a href="index.html">Try the Calculator Now</a></p>
   </main>
+   <main>
+    <article>
+      <h1>Rethinking Value: Why You Should Measure Prices in Terms of Calendar Days Worked Instead of Currency</h1>
+      <p><strong>In our daily financial decisions, prices are typically considered in rupee amounts. However, a more relatable approach is to evaluate the cost of goods and services in calendar days worked, showing how much of your life you trade for each purchase. This perspective reveals the true impact of spending, fostering more mindful habits.</strong></p>
+      
+      <h2>Table of Contents</h2>
+      <ol>
+        <li><a href="#understanding">Understanding the Days Worked Cost Concept</a></li>
+        <li><a href="#historical">Historical Perspective: Labor as the Foundation of Value</a></li>
+        <li><a href="#calculation">How to Calculate the Calendar Days Cost</a></li>
+        <li><a href="#psychological">Psychological Benefits of This Perspective</a></li>
+        <li><a href="#examples">Real-Life Examples</a></li>
+        <li><a href="#economic">Economic Implications for Society</a></li>
+        <li><a href="#criticisms">Criticisms and Limitations</a></li>
+        <li><a href="#application">How to Apply This Framework in Daily Life</a></li>
+        <li><a href="#case-studies">Case Studies</a></li>
+        <li><a href="#faq">Frequently Asked Questions</a></li>
+      </ol>
+
+      <section id="understanding">
+        <h2>1. Understanding the Days Worked Cost Concept</h2>
+        <p>Instead of thinking in rupees, you measure costs by the number of calendar days it takes to earn enough money for a purchase. This metric ties every expense to your income, helping you realize how much of your life you spend on material goods.</p>
+        <p><strong>For example:</strong></p>
+        <ul>
+          <li>A ₹1,000 purchase, for someone earning ₹30,000 per month, costs 1 day.</li>
+          <li>A ₹1,20,000 smartphone for the same person costs 4 months, or 120 days of earnings.</li>
+        </ul>
+      </section>
+
+      <section id="historical">
+        <h2>2. Historical Perspective: Labor as the Foundation of Value</h2>
+        <p>From ancient barter systems to modern monetary economies, labor has always been at the heart of value creation. In agrarian economies, farmers might trade weeks of effort for essential supplies. While today’s systems use money as a proxy, the underlying reality hasn’t changed: goods and services are paid for with the time we invest in earning.</p>
+      </section>
+
+      <section id="calculation">
+        <h2>3. How to Calculate the Calendar Days Cost</h2>
+        <p><strong>The Formula:</strong></p>
+        <ul>
+          <li>Calculate your daily income by dividing your total monthly income by 30.</li>
+          <li>Divide the price of the item by your daily income to determine how many days are required to afford it.</li>
+        </ul>
+        <p><strong>Example:</strong></p>
+        <p>Monthly income: ₹60,000</p>
+        <p>Daily income: ₹60,000 ÷ 30 = ₹2,000/day</p>
+        <p>Item price: ₹20,000</p>
+        <p>Calendar days required: ₹20,000 ÷ ₹2,000/day = 10 days</p>
+      </section>
+
+      <section id="psychological">
+        <h2>4. Psychological Benefits of This Perspective</h2>
+        <p><strong>1. Improved Awareness of Spending:</strong> When you calculate costs in days worked, you naturally pause to consider whether a purchase is truly worth it.</p>
+        <p><strong>2. Reduced Impulse Buying:</strong> Realizing that a ₹2,000 purchase costs you an entire day can curb unnecessary spending.</p>
+        <p><strong>3. Better Goal Alignment:</strong> Evaluating purchases in terms of time helps you prioritize saving for what truly matters, like vacations or investments.</p>
+      </section>
+
+      <section id="examples">
+        <h2>5. Real-Life Examples</h2>
+        <h3>Example 1: Buying a Smartphone</h3>
+        <p>Cost: ₹1,20,000</p>
+        <p>Monthly income: ₹60,000</p>
+        <p>Daily income: ₹60,000 ÷ 30 = ₹2,000/day</p>
+        <p>Calendar days required: ₹1,20,000 ÷ ₹2,000/day = 60 days</p>
+        <h3>Example 2: Daily Coffee or Chai Habits</h3>
+        <p>Cost per cup: ₹20</p>
+        <p>Daily cost (2 cups): ₹40</p>
+        <p>Monthly cost: ₹40 × 30 = ₹1,200</p>
+        <p>Annual cost: ₹1,200 × 12 = ₹14,400</p>
+        <p>Daily income: ₹1,500/day</p>
+        <p>Calendar days required annually: ₹14,400 ÷ ₹1,500/day = 9.6 days</p>
+      </section>
+
+      <section id="economic">
+        <h2>6. Economic Implications for Society</h2>
+        <p>More Conscious Consumption: Purchases are guided by necessity and priorities rather than impulse. Improved Savings Rates: By recognizing time costs, people save for long-term goals rather than short-term satisfaction.</p>
+      </section>
+
+      <section id="criticisms">
+        <h2>7. Criticisms and Limitations</h2>
+        <p>1. Inconsistent Earnings: For those with fluctuating incomes, daily income calculations may need adjustment.</p>
+        <p>2. Over-Simplification: Emotional or utility-based values (e.g., joy from a family vacation) aren’t accounted for.</p>
+      </section>
+
+      <section id="application">
+        <h2>8. How to Apply This Framework in Daily Life</h2>
+        <p>Track Your Monthly Income: Know your after-tax earnings to calculate daily income.</p>
+        <p>Reevaluate Major Purchases: Before spending on big-ticket items, calculate their cost in days worked.</p>
+      </section>
+
+      <section id="case-studies">
+        <h2>9. Case Studies: Before and After Adopting the Approach</h2>
+        <p><strong>Case Study 1: Neha’s Smartphone Upgrade</strong></p>
+        <p>Before: Neha upgraded her ₹1,20,000 phone annually. After: Realizing it cost 60 days of effort, she decided to upgrade every three years, saving 120 days of earnings in two cycles.</p>
+      </section>
+
+      <section id="faq">
+        <h2>10. Frequently Asked Questions</h2>
+        <p><strong>Q1:</strong> How does this differ from traditional budgeting? Traditional budgets focus on monetary limits, while this method ties spending to the time invested in earning.</p>
+        <p><strong>Q2:</strong> Is this applicable for all income types? Yes, though variable income earners may need to calculate averages.</p>
+      </section>
+
+      <footer>
+        <p>&copy; 2024 CanIBuyIt</p>
+      </footer>
+    </article>
+  </main>
+  
   <footer>
     <p>&copy; 2024 CanIBuyIt</p>
   </footer>
 </body>
 </html>
+
+
+
